# postskill

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  LAUNCH_PACK.md  LICENSE  Makefile  README.md  README_EN.md  RELEASE_LOG.md  SKILL.md  copy_generator_patch.py  postskill.py  pyproject.toml  pytest.ini  requirements.txt  test_adversarial.sh
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-publish.yml  ci.yml  monitor.yml  notify.yml  release-report.yml
docs/: ADVERSARIAL_GENERATION.md
examples/: ai-awakening-output.md
scripts/: __init__.py  adversarial_generator.py  concurrency_control.py  copy_generator.py  feishu_doc_creator.py  image_generator.py  publisher.py  quality_feedback.py
styles/: 故事叙述型.md  数据驱动型.md
tests/: test_image_generator.py
